# curated

./: .gitignore  README.md  adam-example-reqs.txt  copilot-studio-schema.yaml  deploy.sh  requirements.txt  startup.sh
AgentChat-Mcp-gpt5-mini-update/: .gitignore  ADX_USER_IMPERSONATION_SUMMARY.md  GETTING_STARTED.md  MAGENTIC_ORCHESTRATION_IMPROVEMENTS.md  MEMORY_SYSTEM.md  azure-env-template.env  deploy-investigatoragent.ps1  deploy.ps1  test_coordinator_functions.py  test_kernel_functions.py
AgentChat-Mcp-magentic-orchestration-improvements/: A2A_AGENT_DEVELOPMENT_GUIDE.md  RESEARCH_TIME_LIMITS.md  UNIFIED_AGENT_ARCHITECTURE.md  azure-env-template.env  deploy-documentagent.ps1
AgentChat-add-ip-api-agent/: ADX_CONSENT_GUIDE.md  ADX_TOKEN_CACHING_FIX.md  DEPLOYMENT.md  README.md  azure-env-template.env  deploy.bat  package-lock.json  tsconfig.json
AgentChat-add-kernel-memory/: ADDING_AGENTS_AND_TOOLS.md  azure_sse_config.py
AgentChat-jb-feature-RAG-index-agent/: RAG_IMPLEMENTATION_SUMMARY.md  RAG_SYSTEM_README.md  RATE_LIMITING_IMPROVEMENTS.md  README.md  angular.json  deployhs.ps1  package-lock.json  package.json  proxy.conf.json  rag_integration_examples.py  rate-limiting.env  test_adx_impersonation.py  test_agent_info.py  test_rag_system.py  test_rate_limiting.py  (+1 more)
AgentChat-new/AzureAISearch-S3-Indexer-main/: .env.sample  README.md  pyproject.toml
AgentChat-new/AzureAISearch-S3-Indexer-main/s3_indexer/: __main__.py  chunking.py  config.py  embeddings.py  extract_text.py  index_management.py  s3_client.py  search_client.py  security_enricher.py
(+593 files in other folders)
